@@ -23,6 +23,12 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-02-26  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Potential infinite loop in SyncBlob() (reported by  Vladimir Faiden).
+
+2002-02-26  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Gravity not respected when drawing text with the convert program.
+
 2002-02-21  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * MPEG multi-part filenames require an embedded %d, not %lu.
   * WriteStream() did not write to fifo (thanks to William Radcliffe).
@@ -33,7 +39,7 @@ ImageMagick Changes</font></font></font></b></td>
 
 2002-02-18  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Fixed memory overrun with -format option of the mogrify program.
-	* Labels were not positioned correctly rectly for VID format.
+  * Labels were not positioned correctly for VID format.
 
 2002-02-16  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Replaced -copy/-replace options with +/-write in the convert program.
