@@ -1,4 +1,7 @@
 2002-02-26  Cristy  <cristy@mystic.es.dupont.com>
+  * Potential infinite loop in SyncBlob() (reported by  Vladimir Faiden).
+
+2002-02-26  Cristy  <cristy@mystic.es.dupont.com>
   * Gravity not respected when drawing text with the convert program.
 
 2002-02-21  Cristy  <cristy@mystic.es.dupont.com>
